[test] Move WasmRunner from test/cctest to test/common
We want to reuse it for FuzzTests, defined as unittests. Thus move the
common helpers to test/common.

R=jkummerow@chromium.org

Bug: 431593798
Change-Id: Iba71df836ea62f86b60e142263cb868c0b2f342b
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6732582
Reviewed-by: Jakob Kummerow <jkummerow@chromium.org>
Commit-Queue: Clemens Backes <clemensb@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101450}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8153,10 +8153,14 @@ if (v8_enable_webassembly) {
     testonly = true
 
     sources = [
+      "test/common/c-signature.h",
       "test/common/flag-utils.h",
+      "test/common/value-helper.h",
       "test/common/wasm/flag-utils.h",
       "test/common/wasm/wasm-module-runner.cc",
       "test/common/wasm/wasm-module-runner.h",
+      "test/common/wasm/wasm-run-utils.cc",
+      "test/common/wasm/wasm-run-utils.h",
     ]
 
     deps = [
