[cleanup] Move ScopedModification to a common place, remove duplicate logic
Change-Id: I300a8357bf620b3c485f486e17cf70317a695199
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6734243
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Reviewed-by: Victor Gomes <victorgomes@chromium.org>
Commit-Queue: Marja Hölttä <marja@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101422}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1533,6 +1533,7 @@ filegroup(
         "src/common/ptr-compr.h",
         "src/common/ptr-compr-inl.h",
         "src/common/thread-local-storage.h",
+        "src/common/scoped-modification.h",
         "src/common/segmented-table.h",
         "src/common/segmented-table-inl.h",
         "src/common/simd128.h",
