[Wasm interpreter] Fix GenericWasmToJSInterpreterWrapper on arm64
There is a typo in wasm/interpreter/arm64/interpreter-builtins-arm64.cc
that causes an error calling from Wasm a JS function that returns
multiple results and where some of the results are of Ref type.

In the same CL we disable 'wasm/memory-fill-outline' for the
Wasm interpreter since it does not support multiple memories.

Making lib_wasm_interpreter_fuzzer_common testonly. Fuzzers can
be testonly.

Change-Id: I64239204f218dee1eefede1fdf5e98766b0c8953
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6756815
Reviewed-by: Paolo Severini <paolosev@microsoft.com>
Commit-Queue: Emmanuel Romero Ruiz <emromero@microsoft.com>
Reviewed-by: Clemens Backes <clemensb@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101455}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8074,6 +8074,8 @@ if (v8_enable_webassembly) {
 
   if (v8_enable_drumbrake) {
     v8_source_set("lib_wasm_interpreter_fuzzer_common") {
+      testonly = true
+
       sources = [
         "test/fuzzer/wasm/interpreter/interpreter-fuzzer-common.cc",
         "test/fuzzer/wasm/interpreter/interpreter-fuzzer-common.h",
