[wasm] Add fuzztest for determinism across compilers
The fuzzer for now only support a single float32 binary
operation(f32.add). It will be extended to more binary operations in
follow-up CLs.

The fuzzer generates different binaries for the same operations, either
embedding the values as constants or passing them as parameters. It also
executes the binaries in different compilers.
It then checks that all configurations produced exactly the same value.

R=jkummerow@chromium.org

Bug: 431593798
Change-Id: Ica61be2d53329df0d64f01a89af961f8acc2a52f
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6759913
Commit-Queue: Clemens Backes <clemensb@chromium.org>
Reviewed-by: Jakob Kummerow <jkummerow@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101452}

--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -818,7 +818,10 @@ v8_source_set("v8_unittests_sources") {
     ]
 
     if (v8_enable_webassembly) {
-      sources += [ "wasm/type-canonicalization-fuzztest.cc" ]
+      sources += [
+        "wasm/cross-compiler-determinism-fuzztest.cc",
+        "wasm/type-canonicalization-fuzztest.cc",
+      ]
     }
 
     if (!is_win) {
