--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4485,6 +4485,8 @@ v8_header_set("v8_internal_headers") {
       sources += [ "src/maglev/x64/maglev-assembler-x64-inl.h" ]
     } else if (v8_current_cpu == "s390x") {
       sources += [ "src/maglev/s390/maglev-assembler-s390-inl.h" ]
+    } else if (v8_current_cpu == "ppc64") {
+      sources += [ "src/maglev/ppc64/maglev-assembler-ppc64-inl.h" ]
     }
   }
 
@@ -5995,6 +5997,11 @@ v8_source_set("v8_base_without_compiler") {
       sources += [
         "src/maglev/s390/maglev-assembler-s390.cc",
         "src/maglev/s390/maglev-ir-s390.cc",
+      ]
+    } else if (v8_current_cpu == "ppc64") {
+      sources += [
+        "src/maglev/ppc64/maglev-assembler-ppc64.cc",
+        "src/maglev/ppc64/maglev-ir-ppc64.cc",
       ]
     }
   }
