[cleanup] Move Script:: methods to script.cc
Change-Id: I294b732add48b1069e2660bb70179c27769f9943
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6765186
Auto-Submit: Toon Verwaest <verwaest@chromium.org>
Commit-Queue: Toon Verwaest <verwaest@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101479}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2229,6 +2229,7 @@ filegroup(
         "src/objects/scope-info.cc",
         "src/objects/scope-info.h",
         "src/objects/scope-info-inl.h",
+        "src/objects/script.cc",
         "src/objects/script.h",
         "src/objects/script-inl.h",
         "src/objects/shared-function-info.cc",
