--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1914,6 +1914,7 @@ if (v8_postmortem_support) {
       "src/objects/primitive-heap-object-inl.h",
       "src/objects/scope-info.h",
       "src/objects/scope-info-inl.h",
+      "src/objects/script.cc",
       "src/objects/script.h",
       "src/objects/script-inl.h",
       "src/objects/shared-function-info.cc",
@@ -5774,6 +5775,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/objects/property.cc",
     "src/objects/regexp-match-info.cc",
     "src/objects/scope-info.cc",
+    "src/objects/script.cc",
     "src/objects/shared-function-info.cc",
     "src/objects/simd.cc",
     "src/objects/source-text-module.cc",
