--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1988,6 +1988,7 @@ filegroup(
         "src/numbers/conversions.cc",
         "src/numbers/conversions.h",
         "src/numbers/conversions-inl.h",
+        "src/numbers/hash-seed.h",
         "src/numbers/hash-seed-inl.h",
         "src/numbers/ieee754.cc",
         "src/numbers/ieee754.h",
@@ -2629,6 +2630,7 @@ filegroup(
         "src/zone/zone-type-traits.h",
         "src/zone/zone-utils.h",
         "third_party/rapidhash-v8/rapidhash.h",
+        "third_party/rapidhash-v8/secret.h",
         "third_party/siphash/halfsiphash.cc",
         "third_party/siphash/halfsiphash.h",
         "third_party/utf8-decoder/utf8-decoder.h",
