--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6768,6 +6768,8 @@ v8_component("v8_libbase") {
   configs = [ ":internal_config_base" ]
 
   public_configs = [ ":libbase_config" ]
+  v8_add_configs += [ "//build/config/compiler:thinlto_optimize_max" ]
+  v8_remove_configs += [ "//build/config/compiler:thinlto_optimize_default" ]
 
   deps = [ ":v8_config_headers" ]
 
@@ -6987,6 +6989,8 @@ v8_component("v8_libplatform") {
   ]
 
   configs = [ ":internal_config_base" ]
+  v8_add_configs += [ "//build/config/compiler:thinlto_optimize_max" ]
+  v8_remove_configs += [ "//build/config/compiler:thinlto_optimize_default" ]
 
   if (is_component_build) {
     defines = [ "BUILDING_V8_PLATFORM_SHARED" ]
@@ -7778,6 +7782,8 @@ if (is_component_build) {
     ]
 
     configs = [ ":internal_config" ]
+    v8_add_configs += [ "//build/config/compiler:thinlto_optimize_max" ]
+    v8_remove_configs += [ "//build/config/compiler:thinlto_optimize_default" ]
 
     public_configs = [ ":external_config" ]
   }
@@ -7913,6 +7919,8 @@ v8_executable("d8") {
     ":internal_config_base",
     ":v8_tracing_config",
   ]
+  v8_add_configs += [ "//build/config/compiler:thinlto_optimize_max" ]
+  v8_remove_configs += [ "//build/config/compiler:thinlto_optimize_default" ]
 
   deps = [
     ":v8",
