--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -90,6 +90,32 @@ declare_args() {
   # Sets -DV8_LITE_MODE.
   v8_enable_lite_mode = false
 
+  # WebAssembly interpreter (DrumBrake)  build flag.
+  v8_enable_drumbrake = false
+
+  # Enable Wasm interpreter tracing.
+  v8_enable_drumbrake_tracing = false
+
+  # On non-Desktop platforms, enable explicit bounds checks in the Wasm
+  # interpreter, where the bounds checking is done in the instruction handler,
+  # not using an unhandled exception filter (which also doesn't work with
+  # Win-ASAN).
+  # Also enables explicit bounds checks on component builds in platforms other
+  # than Windows because of a problem with function name mangling for vectorcall
+  # ABI on ELF (The vectorcall calling convention requires a mangling that
+  # includes @@, but on ELF an @ indicates that the part after it is the version
+  # of the symbol, with @@ indicating the default symbol version to link against
+  # when none is specified by the caller and this causes linker errors). As a
+  # workaround, we need to disable the vectorcall calling convention for
+  # component builds on Linux and Mac, which means that we cannot use DrumBrake
+  # builtins for Load/Store instruction handlers, because of the different
+  # calling convention.
+  # Windows component builds are also enabled to support cross-compilation.
+  v8_drumbrake_bounds_checks =
+      (is_win && (is_asan || is_ubsan || is_msan || is_tsan)) ||
+      !(is_win || is_linux || is_mac) || v8_current_cpu != "x64" || !is_clang ||
+      is_component_build
+
   # We use target_os == "ios" here because it isn't equivalent to is_ios
   # (is_ios is based on host_os).
   if (target_os == "ios") {
