[heap] Add UnsafeJsonEmitter for emitting NVP data
Add UnsafeJsonEmitter for building JSON object as a C++ string. We
can use this in PrintNVP() to make emitting counters/properties less
cumbersome. It also allows us to add properties to all GC kinds
easily without duplication.

Bug: 408962793
Change-Id: Ia281e095c966c3bd3c844e5f94132488c5329902
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6769762
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Dominik Inführ <dinfuehr@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101515}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3946,6 +3946,8 @@ filegroup(
         "src/heap/base/memory-tagging.cc",
         "src/heap/base/stack.cc",
         "src/heap/base/stack.h",
+        "src/heap/base/unsafe-json-emitter.cc",
+        "src/heap/base/unsafe-json-emitter.h",
         "src/heap/base/worklist.cc",
         "src/heap/base/worklist.h",
     ] + select({
