--- a/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
+++ b/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
@@ -2,7 +2,6 @@
     {"app_args": "--always-osr", "app_name": "d8", "probability": 0.03},
     {"app_args": "--always-osr-from-maglev", "app_name": "d8", "probability": 0.03},
     {"app_args": "--always-sparkplug", "app_name": "d8", "probability": 0.03},
-    {"app_args": "--always-turbofan", "app_name": "d8", "probability": 0.03},
     {"app_args": "--assert-types", "app_name": "d8", "probability": 0.25, "contradicts": ["--stress-concurrent-inlining", "--stress-concurrent-inlining-attach-code"]},
     {"app_args": "--force-slow-path", "app_name": "d8", "probability": 0.05},
     {"app_args": "--future", "app_name": "d8", "probability": 0.25},
@@ -30,7 +29,9 @@
     {"app_args": "--no-enable-sse4_1", "app_name": "d8", "probability": 0.05},
     {"app_args": "--no-enable-sse4_2", "app_name": "d8", "probability": 0.05},
     {"app_args": "--no-enable-ssse3", "app_name": "d8", "probability": 0.05},
-    {"app_args": "--no-lazy-feedback-allocation", "app_name": "d8", "probability": 0.2},
+    {"app_args": "--no-flush-bytecode", "app_name": "d8", "probability": 0.05},
+    {"app_args": "--no-lazy", "app_name": "d8", "probability": 0.05},
+    {"app_args": "--no-lazy-feedback-allocation", "app_name": "d8", "probability": 0.25},
     {"app_args": "--no-use-ic", "app_name": "d8", "probability": 0.25},
     {"app_args": "--no-wasm-generic-wrapper", "app_name": "d8", "probability": 0.1},
     {"app_args": "--no-liftoff", "app_name": "d8", "probability": 0.1},
