[wasm][fuzzer] Define dummy module bytes statically
Do not use the module builder but just build the bytes manually. This
avoids having to pass a Zone, and improves performance and memory
consumption.

R=mliedtke@chromium.org

Bug: 433343732
Change-Id: Ic864b67fc51601d8aa5f6ce05dfc5cef304807fc
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6771959
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Commit-Queue: Clemens Backes <clemensb@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101564}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -8186,6 +8186,7 @@ if (v8_enable_webassembly) {
       "test/common/flag-utils.h",
       "test/common/value-helper.h",
       "test/common/wasm/flag-utils.h",
+      "test/common/wasm/wasm-macro-gen.h",
       "test/common/wasm/wasm-module-runner.cc",
       "test/common/wasm/wasm-module-runner.h",
       "test/common/wasm/wasm-run-utils.cc",
