Reland "[wasm][fuzzer] Add random module generation fuzztest"
This is a reland of commit 19291a5a0c9b2b0952a9d4bb17a656b321584cd7.
The fuzztest is now skipped in official builds.

Original change's description:
> [wasm][fuzzer] Add random module generation fuzztest
>
> This adds the equivalent of the "wasm_compile_fuzzer" as a fuzztest.
>
> It extracts the `SyncCompileAndExecuteAgainstReference` method out of
> `WasmExecutionFuzzer::FuzzWasmModule` in order to be able to reuse it in
> the FuzzTest.
>
> In contrast to the libfuzzer fuzzers, the first byte of the input is not
> used as a "configuration byte". Instead, the configuration (tier mask
> and debug mask) is passed explicitly.
>
> Also, the static setup (setting experimental flags) is done in the
> FuzzTest constructor instead of dynamically when executing the first
> testcase.
>
> R=mliedtke@chromium.org
>
> Bug: 433343732
> Change-Id: I9252417a6a1cb4971feb233da833611c1d33d504
> Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6771338
> Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
> Commit-Queue: Clemens Backes <clemensb@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#101573}

Bug: 433343732
Change-Id: I5b30b9ed62b966029d4d9bd79307b27f402efc38
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6779282
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Commit-Queue: Clemens Backes <clemensb@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101580}

--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -230,6 +230,10 @@ declare_args() {
   # Specifies if the target build is a simulator build. By default it is set to
   # true if the host and target do not match and we are not cross-compiling.
   v8_target_is_simulator = ""
+
+  # Some fuzzers depend on fuzzing functionality linked into the v8 library.
+  # For binary size reasons this functionality is not always available.
+  v8_wasm_random_fuzzers = ""
 }
 
 if (v8_use_external_startup_data == "") {
@@ -293,6 +297,14 @@ if (v8_target_is_simulator == "") {
   v8_target_is_simulator =
       (target_cpu != v8_target_cpu && !v8_multi_arch_build) ||
       (current_cpu != v8_current_cpu && v8_multi_arch_build)
+}
+
+# Some fuzzers depend on fuzzing functionality linked into the v8 library.
+# For binary size reasons this functionality is not available for official
+# builds, therefore these fuzzers do not function there and should be skipped
+# instead.
+if (v8_wasm_random_fuzzers == "") {
+  v8_wasm_random_fuzzers = !is_official_build
 }
 
 # Points to // in v8 stand-alone or to //v8/ in chromium. We need absolute
