[maglev] Always enable the graph labeller
.. if v8_always_enable_maglev_graph_labeller.

Change-Id: Ibd1aa3e33a060436c202a443e169f3acb305bb8b
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6772339
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101587}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -158,6 +158,9 @@ declare_args() {
   # Sets -DOBJECT_PRINT.
   v8_enable_object_print = ""
 
+  # Sets -DALWAYS_MAGLEV_GRAPH_LABELLER.
+  v8_always_enable_maglev_graph_labeller = ""
+
   # Sets -DV8_TRACE_MAPS.
   v8_enable_trace_maps = ""
 
@@ -507,6 +510,9 @@ if (v8_enable_verify_heap == "") {
 }
 if (v8_enable_object_print == "") {
   v8_enable_object_print = v8_enable_debugging_features
+}
+if (v8_always_enable_maglev_graph_labeller == "") {
+  v8_always_enable_maglev_graph_labeller = v8_enable_debugging_features
 }
 if (v8_enable_disassembler == "") {
   v8_enable_disassembler = v8_enable_debugging_features
@@ -1193,6 +1199,9 @@ config("features") {
   }
   if (v8_enable_object_print) {
     defines += [ "OBJECT_PRINT" ]
+  }
+  if (v8_always_enable_maglev_graph_labeller) {
+    defines += [ "ALWAYS_MAGLEV_GRAPH_LABELLER" ]
   }
   if (v8_enable_verify_heap) {
     defines += [ "VERIFY_HEAP" ]
