--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -594,6 +594,7 @@ v8_source_set("v8_unittests_sources") {
       "asmjs/asm-scanner-unittest.cc",
       "asmjs/asm-types-unittest.cc",
       "compiler/int64-lowering-unittest.cc",
+      "compiler/turboshaft/load-store-address-hoisting-unittest.cc",
       "compiler/turboshaft/wasm-simd-unittest.cc",
       "compiler/wasm-address-reassociation-unittest.cc",
       "objects/wasm-backing-store-unittest.cc",
