--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -566,6 +566,7 @@ v8_source_set("v8_unittests_sources") {
       "compiler/state-values-utils-unittest.cc",
       "compiler/turboshaft/control-flow-unittest.cc",
       "compiler/turboshaft/late-load-elimination-reducer-unittest.cc",
+      "compiler/turboshaft/load-store-address-hoisting-unittest.cc",
       "compiler/turboshaft/loop-unrolling-analyzer-unittest.cc",
       "compiler/turboshaft/opmask-unittest.cc",
       "compiler/turboshaft/reducer-test.h",
