d8: Fix remaining issues with PartitionAlloc as malloc
- fix reinitialization of PA in LazyInitialize(),
- pimplify PABackedSandboxedABAllocator to avoid conflicts from
  MacTypes.h
- some tests expecting nullptr on malloc are disabled for PA.

Bug: 392817524
Change-Id: I1cd766fb2756410547466cfca5b9d77064e4783c
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6781140
Auto-Submit: Anton Bikineev <bikineev@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101678}

--- a/tools/gcmole/BUILD.gn
+++ b/tools/gcmole/BUILD.gn
@@ -42,6 +42,7 @@ if (v8_gcmole) {
       "../../third_party/icu/source/i18n/",
       "../../third_party/inspector_protocol/",
       "../../third_party/libc++/src/",
+      "../../third_party/partition_alloc/",
       "../../third_party/rapidhash-v8/",
       "../../third_party/rust/",
       "../../third_party/simdutf/",
