[heap] Make `--shared-heap` read only when not supported
When write barriers are disabled, shared heap is not supported. This
is implemented as setting `V8_CAN_CREATE_SHARED_HEAP_BOOL` to false.
However, the runtime flag remain writable and will crash at runtime
is set to true.

This CL makes the flag read only, so setting it to true in code will
fail at build time, and passing the flag  at runtime fails as a flag
contradiction.

Change-Id: I79e01ed291816a2a6f822d14c31bc762292ee2bf
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6798551
Reviewed-by: Dominik Inführ <dinfuehr@chromium.org>
Commit-Queue: Omer Katz <omerkatz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101731}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -7707,14 +7707,19 @@ group("v8_fuzzers") {
   if (v8_enable_webassembly) {
     if (v8_wasm_random_fuzzers) {
       data_deps += [
-        ":v8_simple_wasm_compile_all_fuzzer",
         ":v8_simple_wasm_compile_fuzzer",
         ":v8_simple_wasm_compile_revec_fuzzer",
         ":v8_simple_wasm_compile_simd_fuzzer",
-        ":v8_simple_wasm_compile_wasmgc_fuzzer",
-        ":v8_simple_wasm_deopt_fuzzer",
         ":v8_simple_wasm_init_expr_fuzzer",
       ]
+
+      if (!v8_disable_write_barriers) {
+        data_deps += [
+          ":v8_simple_wasm_compile_all_fuzzer",
+          ":v8_simple_wasm_compile_wasmgc_fuzzer",
+          ":v8_simple_wasm_deopt_fuzzer",
+        ]
+      }
     }
     data_deps += [
       ":v8_simple_multi_return_fuzzer",
@@ -8239,13 +8244,6 @@ if (v8_enable_webassembly) {
   }
 
   if (v8_wasm_random_fuzzers) {
-    v8_wasm_fuzzer("wasm_compile_all_fuzzer") {
-      sources = [
-        "test/common/wasm/test-signatures.h",
-        "test/fuzzer/wasm/compile-all.cc",
-      ]
-    }
-
     v8_wasm_fuzzer("wasm_compile_fuzzer") {
       sources = [
         "test/common/wasm/test-signatures.h",
@@ -8267,19 +8265,28 @@ if (v8_enable_webassembly) {
       ]
     }
 
-    v8_wasm_fuzzer("wasm_compile_wasmgc_fuzzer") {
-      sources = [
-        "test/common/wasm/test-signatures.h",
-        "test/fuzzer/wasm/compile-wasmgc.cc",
-      ]
-    }
-
     v8_wasm_fuzzer("wasm_init_expr_fuzzer") {
       sources = [ "test/fuzzer/wasm/init-expr.cc" ]
     }
 
-    v8_wasm_fuzzer("wasm_deopt_fuzzer") {
-      sources = [ "test/fuzzer/wasm/deopt.cc" ]
+    if (!v8_disable_write_barriers) {
+      v8_wasm_fuzzer("wasm_compile_all_fuzzer") {
+        sources = [
+          "test/common/wasm/test-signatures.h",
+          "test/fuzzer/wasm/compile-all.cc",
+        ]
+      }
+
+      v8_wasm_fuzzer("wasm_compile_wasmgc_fuzzer") {
+        sources = [
+          "test/common/wasm/test-signatures.h",
+          "test/fuzzer/wasm/compile-wasmgc.cc",
+        ]
+      }
+
+      v8_wasm_fuzzer("wasm_deopt_fuzzer") {
+        sources = [ "test/fuzzer/wasm/deopt.cc" ]
+      }
     }
   }  # v8_wasm_random_fuzzers
 }
