[maglev] Thin nodes
This change refactors the register allocation logic in Maglev to improve
how node-specific information is managed.

Previously, register allocation data (like live ranges, spill slots, and
temporary registers) was stored directly within ValueNode and NodeBase.
This created a tight coupling and made the node objects heavier than
necessary, especially during earlier compilation phases where this
information isn't needed. This is especially true for Turbolev, which
only uses the frontend of Maglev and therefore do not benefit of these
fat nodes.

This patch introduces RegallocNodeInfo and RegallocValueNodeInfo classes
to encapsulate all register allocation data. Now, NodeBase and ValueNode
simply hold a pointer to these info objects, which are allocated only
when the register allocation phase begins.

A follow-up CL will also reduce the size of the inputs.

Bug: 431933185
Change-Id: I1b3be1f1601f4548acf4081baddf5bd5413f9083
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6798209
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101691}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2908,6 +2908,7 @@ filegroup(
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-regalloc-data.h",
+            "src/maglev/maglev-regalloc-node-info.h",
             "src/maglev/maglev-regalloc.h",
             "src/maglev/maglev-register-frame-array.h",
             "src/maglev/maglev.h",
