--- a/BUILD.gn
+++ b/BUILD.gn
@@ -448,9 +448,6 @@ declare_args() {
   # ReadOnlySpace.
   v8_enable_extensible_ro_snapshot = true
 
-  # Enable Turboshaft CSA pipeline.
-  v8_enable_turboshaft_csa = false
-
   # Black allocate objects on separate pages.
   v8_enable_black_allocated_pages = ""
 
@@ -2574,10 +2571,6 @@ template("run_mksnapshot") {
       if (!v8_enable_builtins_profiling && v8_enable_builtins_reordering) {
         args += [ "--reorder-builtins" ]
       }
-    }
-
-    if (v8_enable_turboshaft_csa) {
-      args += [ "--turboshaft-csa" ]
     }
 
     # This is needed to distinguish between generating code for the simulator
@@ -5032,7 +5025,7 @@ v8_header_set("v8_internal_headers") {
     ":v8_heap_base_headers",
     ":v8_libbase",
     ":v8_maybe_temporal",
-    "//third_party/simdutf:simdutf",
+    "//third_party/simdutf",
   ]
 }
 
@@ -6369,7 +6362,7 @@ v8_source_set("v8_base_without_compiler") {
     ":v8_shared_internal_headers",
     ":v8_tracing",
     ":v8_version",
-    "src/inspector:inspector",
+    "src/inspector",
     "//third_party/dragonbox",
     "//third_party/fast_float",
     "//third_party/highway:libhwy",
@@ -6383,7 +6376,7 @@ v8_source_set("v8_base_without_compiler") {
     ":v8_headers",
     ":v8_internal_headers",
     ":v8_maybe_icu",
-    "//third_party/simdutf:simdutf",
+    "//third_party/simdutf",
   ]
 
   if (v8_fuzzilli) {
@@ -7349,7 +7342,7 @@ if (v8_check_header_includes) {
       ":v8_maybe_temporal",
       ":v8_version",
       ":wee8",
-      "src/inspector:inspector",
+      "src/inspector",
       "src/inspector:inspector_string_conversions",
     ]
   }
@@ -7668,7 +7661,7 @@ group("v8_archive") {
 
   if (!is_win) {
     # On windows, cctest doesn't link with v8_static_library.
-    deps += [ "test/cctest:cctest" ]
+    deps += [ "test/cctest" ]
   }
 }
 
@@ -7898,7 +7891,7 @@ v8_executable("d8") {
     ":v8_libplatform",
     ":v8_tracing",
     "//build/win:default_exe_manifest",
-    "//third_party/simdutf:simdutf",
+    "//third_party/simdutf",
   ]
 
   if (is_posix || is_fuchsia) {
