[regexp] Introduce new Bytecode list
The new Bytecode list includes operand names and types for each
Bytecode. This allows us to automatically calculate currently
manually maintained information (e.g. Bytecode Size) at compile time.
In addition we can use operand names to access operands from bytecode.
This will increase stability, maintainability and readability of all
areas that deal with RegExp Bytecodes (Interpreter, Generator,
Peephole optimization, ...) in the future.

This CL only introduces the new bytecode structures.
As the layout should be backwards-compatible with the currently used
bytecodes, changing all users to the new bytecode list can be done
incrementally.

Bug: 433891213
Change-Id: I2ab65bd9e7a13b34c01ab1aca4cd9946a523503b
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6779591
Reviewed-by: Jakob Linke <jgruber@chromium.org>
Commit-Queue: Patrick Thier <pthier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101700}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2387,6 +2387,7 @@ filegroup(
         "src/regexp/regexp-bytecode-peephole.h",
         "src/regexp/regexp-bytecodes.cc",
         "src/regexp/regexp-bytecodes.h",
+        "src/regexp/regexp-bytecodes-inl.h",
         "src/regexp/regexp-compiler.cc",
         "src/regexp/regexp-compiler.h",
         "src/regexp/regexp-compiler-tonode.cc",
