--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4234,6 +4234,7 @@ v8_header_set("v8_internal_headers") {
     "src/regexp/regexp-bytecode-generator-inl.h",
     "src/regexp/regexp-bytecode-generator.h",
     "src/regexp/regexp-bytecode-peephole.h",
+    "src/regexp/regexp-bytecodes-inl.h",
     "src/regexp/regexp-bytecodes.h",
     "src/regexp/regexp-compiler.h",
     "src/regexp/regexp-dotprinter.h",
