Exclude warning from targets
This CL is part of number of CLs disabling `-Wexit-time-destructors`in
places where this warning is going off. This will allow having this
warning enabled-by-default across the codebase, whilst documenting the
places where corrections for this warning are necessary.

Bug: chromium:40031409
Change-Id: Ia22d787ec01870f84403aaf1961a0e7d761ef76d
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6804641
Commit-Queue: Claudio DeSouza <cdesouza@chromium.org>
Reviewed-by: Victor Gomes <victorgomes@chromium.org>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101772}

--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -193,6 +193,10 @@ v8_source_set("cppgc_unittests_sources") {
       "../..:v8_tracing",
     ]
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 v8_executable("v8_unittests") {
@@ -814,7 +818,7 @@ v8_source_set("v8_unittests_sources") {
 
     deps += [
       "//third_party/abseil-cpp:absl_full",
-      "//third_party/fuzztest:fuzztest",
+      "//third_party/fuzztest",
       "//third_party/fuzztest:init_fuzztest",
     ]
 
@@ -836,7 +840,7 @@ v8_source_set("v8_unittests_sources") {
         "json/json-unittest.cc",
         "profiler/heap-snapshot-unittest.cc",
       ]
-      deps += [ "//third_party/jsoncpp:jsoncpp" ]
+      deps += [ "//third_party/jsoncpp" ]
     }
   }
 
@@ -868,6 +872,10 @@ v8_source_set("v8_unittests_sources") {
       ]
     }
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 v8_source_set("inspector_unittests_sources") {
