--- a/BUILD.gn
+++ b/BUILD.gn
@@ -7024,6 +7024,10 @@ v8_source_set("fuzzer_support") {
     ":v8_maybe_icu",
   ]
   deps = [ ":v8_maybe_temporal" ]
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 v8_source_set("v8_bigint") {
@@ -7929,6 +7933,10 @@ v8_executable("d8") {
   if (current_os == "zos" && is_component_build) {
     deps += [ ":zoslib" ]
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 v8_executable("v8_hello_world") {
@@ -7975,6 +7983,10 @@ v8_executable("v8_sample_process") {
   if (current_os == "zos" && is_component_build) {
     deps += [ ":zoslib" ]
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 if (want_v8_shell) {
@@ -8043,6 +8055,10 @@ template("v8_fuzzer") {
       ":external_config",
       ":internal_config_base",
     ]
+
+    # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+    # enable the diagnostic by removing this line.
+    configs += [ "//build/config/compiler:no_exit_time_destructors" ]
   }
 
   v8_executable("v8_simple_${fuzzer_name}") {
