--- a/test/cctest/BUILD.gn
+++ b/test/cctest/BUILD.gn
@@ -15,7 +15,7 @@ v8_executable("cctest") {
     "../..:v8_libbase",
     "../..:v8_libplatform",
     "../../tools/debug_helper:v8_debug_helper",
-    "//third_party/simdutf:simdutf",
+    "//third_party/simdutf",
   ]
 
   data_deps = [ "../../tools:v8_testrunner" ]
@@ -44,6 +44,10 @@ v8_executable("cctest") {
   if (current_os == "aix") {
     ldflags = [ "-Wl,-bbigtoc" ]
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
 
 v8_header_set("cctest_headers") {
@@ -415,4 +419,8 @@ v8_source_set("cctest_sources") {
       "//third_party/perfetto/protos/perfetto/trace:lite",
     ]
   }
+
+  # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+  # enable the diagnostic by removing this line.
+  configs += [ "//build/config/compiler:no_exit_time_destructors" ]
 }
