[gn] Add additional compiler flag -Wunnecessary-virtual-specifier
The flag is used in google3.

Bug: 394494905

Change-Id: Iebe3582c4de99be0c625e145943ca7ea0b6324be
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6818308
Commit-Queue: Andreas Haas <ahaas@chromium.org>
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101766}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1759,7 +1759,10 @@ config("strict_warnings") {
         v8_current_cpu == "mips64el" || v8_current_cpu == "riscv64") {
       cflags += [ "-Wshorten-64-to-32" ]
     }
-    cflags += [ "-Wmissing-field-initializers" ]
+    cflags += [
+      "-Wmissing-field-initializers",
+      "-Wunnecessary-virtual-specifier",
+    ]
   }
 }
 
