[exit-time-destructors] Exclude target with warnings
This CL is part of number of CLs disabling `-Wexit-time-destructors`in
places where this warning is going off. This will allow having this
warning enabled-by-default across the codebase, whilst documenting the
places where corrections for this warning are necessary.

Bug: 40031409, 430332953
Change-Id: I34ca4baa643d63ba6ee499eb4a93676dd67e5a7a
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6827997
Reviewed-by: Patrick Thier <pthier@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Claudio DeSouza <cdesouza@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102041}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -6877,6 +6877,10 @@ v8_component("v8_libbase") {
       libs += [ "advapi32.lib" ]  # Needed for TraceLoggingProvider.h
     }
 
+    # TODO(crbug.com/40031409): Fix code that adds exit-time destructors and
+    # enable the diagnostic by removing this line.
+    configs += [ "//build/config/compiler:no_exit_time_destructors" ]
+
     data_deps += [ "//build/win:runtime_libs" ]
   } else if (current_os == "zos") {
     sources += [
