[wasm] Refactor templatized Wasm wrapper builder
Follow-up after https://crrev.com/c/6827999.

Bug: 353475584
Change-Id: I3615a6ac8618880b6f300663b4934bce6c6b22a3
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6828760
Reviewed-by: Daniel Lehmann <dlehmann@chromium.org>
Reviewed-by: Thibaud Michaud <thibaudm@chromium.org>
Commit-Queue: Paolo Severini <paolosev@microsoft.com>
Cr-Commit-Position: refs/heads/main@{#101884}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3049,6 +3049,7 @@ filegroup(
             "src/wasm/sync-streaming-decoder.cc",
             "src/wasm/turboshaft-graph-interface.cc",
             "src/wasm/turboshaft-graph-interface.h",
+            "src/wasm/turboshaft-graph-interface-inl.h",
             "src/wasm/value-type.cc",
             "src/wasm/value-type.h",
             "src/wasm/wasm-arguments.h",
@@ -3104,6 +3105,7 @@ filegroup(
             "src/wasm/well-known-imports.h",
             "src/wasm/wrappers.cc",
             "src/wasm/wrappers.h",
+            "src/wasm/wrappers-inl.h",
             "third_party/utf8-decoder/generalized-utf8-decoder.h",
         ],
         "//conditions:default": [],
